@@ -4,7 +4,7 @@ but there are many rich configuration options for working with users, groups,
 and permissions.
 
 This version is supported on Python 2.7, 3.3, 3.4, 3.5, and 3.6; and Django >=
-1.5. Under Python 2, it requires `python-ldap
+1.8. Under Python 2, it requires `python-ldap
 <https://pypi.python.org/pypi/python-ldap>`_ >= 2.0; under Python 3, it uses
 `pyldap <https://pypi.python.org/pypi/pyldap>`_.
 
