@@ -1,7 +1,0 @@
-try:
-    from django.conf.defaults import patterns
-except ImportError:
-    patterns = list
-
-
-urlpatterns = patterns('')
